[package]
name = "pizzeria-rustorante"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1" }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
chrono = "0.4.37"
dotenvy = "0.15.7"